--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.0.M5</version>
+		<version>2.0.0.M6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -50,18 +50,23 @@
 			<scope>runtime</scope>
 		</dependency>
 
+
+
 		<!--Test-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-test</artifactId>
-			<scope>test</scope>
-		</dependency>
 
+		<!--https://github.com/shazam/shazamcrest	-->
+		<dependency>
+			<groupId>com.shazam</groupId>
+			<artifactId>shazamcrest</artifactId>
+			<version>LATEST</version>
+			<scope>test</scope>
+
+		</dependency>
 
 	</dependencies>
 
