minor test changes

--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
 
 		</dependency>
 
+		<!--production-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
