--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.0.M6</version>
+		<version>2.0.0.M7</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -60,18 +60,24 @@
 		</dependency>
 
 		<!--https://github.com/shazam/shazamcrest	-->
-		<dependency>
-			<groupId>com.shazam</groupId>
-			<artifactId>shazamcrest</artifactId>
-			<version>LATEST</version>
-			<scope>test</scope>
+		<!--<dependency>-->
+			<!--<groupId>com.shazam</groupId>-->
+			<!--<artifactId>shazamcrest</artifactId>-->
+			<!--<version>LATEST</version>-->
+			<!--<scope>test</scope>-->
 
-		</dependency>
+		<!--</dependency>-->
 
 		<!--production-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.2</version>
 		</dependency>
 
 	</dependencies>
